--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
 
         root /usr/share/nginx/html;
         index index.html;
-
+        
         # Internal Redis proxy for NJS modules
         location ~ ^/redis-internal/(.+) {
             internal;
@@ -42,12 +42,21 @@ http {
             redis2_pass redis_backend;
         }
 
-        # API endpoints
+        # API endpoints with explicit body configuration
         location /api/auth/login {
+            # Ensure request body is available
+            client_body_buffer_size 32k;
+            client_max_body_size 32k;
+            
+            # Make request body available to NJS
             js_content auth.handleLogin;
         }
 
         location /api/auth/register {
+            # Ensure request body is available
+            client_body_buffer_size 32k;
+            client_max_body_size 32k;
+            
             js_content auth.handleRegister;
         }
 
@@ -60,10 +69,18 @@ http {
         }
 
         location ~ ^/api/admin/ {
+            # Ensure request body is available for admin operations
+            client_body_buffer_size 32k;
+            client_max_body_size 32k;
+            
             js_content admin.handleAdminRequest;
         }
 
         location ~ ^/api/chat/ {
+            # Ensure request body is available for chat messages
+            client_body_buffer_size 64k;
+            client_max_body_size 64k;
+            
             js_content chat.handleChatRequest;
         }
 
