--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,68 +1,48 @@
-# nginx/Dockerfile - Complete setup with NJS and Redis2 module
+# nginx/Dockerfile - Using OpenResty with nginx 1.25.3 (compatible with NJS 0.7.0+)
 
-FROM nginx:1.25.3-alpine
+FROM openresty/openresty:1.25.3.1-0-alpine-fat
 
-# Install dependencies for building nginx modules
+# Install additional dependencies including NJS
 RUN apk add --no-cache \
-    nginx-module-njs \
     curl \
-    build-base \
-    pcre-dev \
-    zlib-dev \
-    openssl-dev
-
-# Download and build the redis2 module from a stable release
-WORKDIR /tmp
-
-# Use a specific stable release instead of git clone
-RUN wget https://github.com/openresty/redis2-nginx-module/archive/v0.15.tar.gz && \
-    tar -xzf v0.15.tar.gz && \
-    wget http://nginx.org/download/nginx-$(nginx -v 2>&1 | grep -o '[0-9.]*').tar.gz && \
-    tar -xzf nginx-*.tar.gz && \
-    cd nginx-* && \
-    ./configure \
-        --add-dynamic-module=/tmp/redis2-nginx-module-0.15 \
-        --with-compat && \
-    make modules && \
-    cp objs/ngx_http_redis2_module.so /usr/lib/nginx/modules/
-
-# Clean up build dependencies and files
-RUN apk del build-base pcre-dev zlib-dev openssl-dev && \
-    rm -rf /tmp/*
+    wget \
+    nginx-module-njs
 
 # Set working directory
-WORKDIR /usr/share/nginx/html
+WORKDIR /usr/local/openresty/nginx/html
 
-# Remove default NGINX configuration and content
+# Remove default configuration and content
 RUN rm /etc/nginx/conf.d/default.conf && \
-    rm /etc/nginx/nginx.conf && \
-    rm -rf /usr/share/nginx/html/*
+    rm /usr/local/openresty/nginx/conf/nginx.conf && \
+    rm -rf /usr/local/openresty/nginx/html/*
 
-# Copy NGINX configuration
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Create directories and download external libraries
+# Create directories
 RUN mkdir -p /etc/nginx/njs && \
-    mkdir -p /usr/share/nginx/html/css && \
-    mkdir -p /usr/share/nginx/html/js/lib && \
-    mkdir -p /usr/share/nginx/html/assets && \
+    mkdir -p /usr/local/openresty/nginx/html/css && \
+    mkdir -p /usr/local/openresty/nginx/html/js/lib && \
+    mkdir -p /usr/local/openresty/nginx/html/assets && \
     mkdir -p /var/cache/nginx && \
-    mkdir -p /var/log/nginx && \
-    curl -o /usr/share/nginx/html/js/lib/jquery.min.js https://code.jquery.com/jquery-3.7.1.min.js && \
-    curl -o /usr/share/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js && \
-    curl -o /usr/share/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css
+    mkdir -p /var/log/nginx
 
-# Copy application files
+# Download external libraries
+RUN curl -o /usr/local/openresty/nginx/html/js/lib/jquery.min.js https://code.jquery.com/jquery-3.7.1.min.js && \
+    curl -o /usr/local/openresty/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js && \
+    curl -o /usr/local/openresty/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
+
+# Copy NGINX configuration (adjust paths for OpenResty)
+COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
+
+# Copy NJS files
 COPY njs/ /etc/nginx/njs/
-COPY html/ /usr/share/nginx/html/
-COPY static/ /usr/share/nginx/html/
+COPY html/ /usr/local/openresty/nginx/html/
+COPY static/ /usr/local/openresty/nginx/html/
 
 # Set proper permissions
-RUN chmod -R 755 /usr/share/nginx/html/ && \
+RUN chmod -R 755 /usr/local/openresty/nginx/html/ && \
     chmod -R 755 /etc/nginx/njs/ && \
-    chown -R nginx:nginx /usr/share/nginx/html/ && \
-    chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /var/log/nginx
+    chown -R nobody:nobody /usr/local/openresty/nginx/html/ && \
+    chown -R nobody:nobody /var/cache/nginx && \
+    chown -R nobody:nobody /var/log/nginx
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
@@ -71,5 +51,5 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 # Expose port
 EXPOSE 80
 
-# Use the custom entrypoint
-CMD ["nginx", "-g", "daemon off;"]
+# Start OpenResty
+CMD ["/usr/local/openresty/bin/openresty", "-g", "daemon off;"]
