--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,13 +51,17 @@ http {
         # POST /redis/set with JSON: {"key": "mykey", "value": "myvalue"}
         location = /redis/set {
             access_by_lua_block {
-                -- Simple auth check could go here
                 local auth_header = ngx.var.http_authorization
                 if not auth_header then
                     ngx.status = 401
                     ngx.say('{"error": "Authorization required"}')
                     ngx.exit(401)
                 end
+                -- Allow internal requests
+                if auth_header == "Bearer internal" then
+                    return
+                end
+                -- Add proper auth validation here for external requests
             }
             
             content_by_lua_block {
@@ -103,6 +107,10 @@ http {
                     ngx.say('{"error": "Authorization required"}')
                     ngx.exit(401)
                 end
+                -- Allow internal requests
+                if auth_header == "Bearer internal" then
+                    return
+                end
             }
             
             set_unescape_uri $redis_key $arg_key;
@@ -143,6 +151,10 @@ http {
                     ngx.status = 401
                     ngx.say('{"error": "Authorization required"}')
                     ngx.exit(401)
+                end
+                -- Allow internal requests
+                if auth_header == "Bearer internal" then
+                    return
                 end
             }
             
@@ -191,6 +203,10 @@ http {
                     ngx.status = 401
                     ngx.say('{"error": "Authorization required"}')
                     ngx.exit(401)
+                end
+                -- Allow internal requests
+                if auth_header == "Bearer internal" then
+                    return
                 end
             }
             
