--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,5 @@
 # OpenResty compatible nginx.conf
-# Load required modules
-load_module modules/ngx_http_js_module.so;
-load_module modules/ngx_http_set_misc_module.so;
+# OpenResty has redis2 and lua built-in, no external modules needed
 
 user nobody;
 worker_processes auto;
@@ -17,10 +15,8 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Import NJS modules (only for auth/routing logic)
-    js_import auth from /etc/nginx/njs/auth.js;
-    js_import utils from /etc/nginx/njs/utils.js;
-    js_import admin from /etc/nginx/njs/admin.js;
+    # OpenResty has lua built-in, no need for NJS imports
+    # We'll use lua for server-side logic
 
     # Upstreams
     upstream redis_backend {
@@ -113,31 +109,26 @@ http {
                 end
             }
             
-            set_unescape_uri $redis_key $arg_key;
-            
-            if ($redis_key = '') {
-                return 400 '{"error": "Key parameter required"}';
-            }
-            
-            redis2_query get $redis_key;
-            redis2_pass redis_backend;
-            
-            # Format response as JSON
-            header_filter_by_lua_block {
-                ngx.header.content_type = "application/json"
-            }
-            
-            body_filter_by_lua_block {
-                if ngx.arg[2] then  -- last chunk
-                    local body = ngx.arg[1]
-                    if body then
-                        body = body:gsub('[\r\n]', '')
-                        if body == '$-1' or body == '' then
-                            ngx.arg[1] = '{"success": true, "value": null}'
-                        else
-                            ngx.arg[1] = '{"success": true, "value": "' .. body .. '"}'
-                        end
+            content_by_lua_block {
+                local key = ngx.var.arg_key
+                if not key or key == '' then
+                    ngx.status = 400
+                    ngx.say('{"error": "Key parameter required"}')
+                    return
+                end
+                
+                -- Use redis2 module
+                local res = ngx.location.capture("/redis-internal/get/" .. key)
+                if res.status == 200 then
+                    local body = res.body:gsub('[\r\n]', '')
+                    if body == '$-1' or body == '' then
+                        ngx.say('{"success": true, "value": null}')
+                    else
+                        ngx.say('{"success": true, "value": "' .. body .. '"}')
                     end
+                else
+                    ngx.status = 500
+                    ngx.say('{"error": "Redis operation failed"}')
                 end
             }
         }
@@ -158,38 +149,34 @@ http {
                 end
             }
             
-            set_unescape_uri $redis_key $arg_key;
-            
-            if ($redis_key = '') {
-                return 400 '{"error": "Key parameter required"}';
-            }
-            
-            redis2_query hgetall $redis_key;
-            redis2_pass redis_backend;
-            
-            header_filter_by_lua_block {
-                ngx.header.content_type = "application/json"
-            }
-            
-            body_filter_by_lua_block {
-                if ngx.arg[2] then  -- last chunk
-                    local cjson = require "cjson"
-                    local body = ngx.arg[1]
-                    if body then
-                        local lines = {}
-                        for line in body:gmatch("[^\r\n]+") do
-                            table.insert(lines, line)
-                        end
-                        
-                        local result = {}
-                        for i = 1, #lines, 2 do
-                            if lines[i+1] then
-                                result[lines[i]] = lines[i+1]
-                            end
-                        end
-                        
-                        ngx.arg[1] = cjson.encode({success = true, data = result})
+            content_by_lua_block {
+                local cjson = require "cjson"
+                local key = ngx.var.arg_key
+                if not key or key == '' then
+                    ngx.status = 400
+                    ngx.say('{"error": "Key parameter required"}')
+                    return
+                end
+                
+                local res = ngx.location.capture("/redis-internal/hgetall/" .. key)
+                if res.status == 200 then
+                    local body = res.body
+                    local lines = {}
+                    for line in body:gmatch("[^\r\n]+") do
+                        table.insert(lines, line)
                     end
+                    
+                    local result = {}
+                    for i = 1, #lines, 2 do
+                        if lines[i+1] then
+                            result[lines[i]] = lines[i+1]
+                        end
+                    end
+                    
+                    ngx.say(cjson.encode({success = true, data = result}))
+                else
+                    ngx.status = 500
+                    ngx.say('{"error": "Redis operation failed"}')
                 end
             }
         }
@@ -242,16 +229,10 @@ http {
             }
         }
         
-        # Internal Redis operations (called by Lua)
-        location = /redis-internal/set {
+        # Internal Redis operations
+        location ~ ^/redis-internal/(.+) {
             internal;
-            redis2_query set $redis_key $redis_value;
-            redis2_pass redis_backend;
-        }
-        
-        location = /redis-internal/hset {
-            internal;
-            redis2_query hset $redis_key $redis_field $redis_value;
+            redis2_query $1;
             redis2_pass redis_backend;
         }
 
@@ -310,27 +291,33 @@ http {
             proxy_read_timeout 300s;
         }
 
-        # ===== AUTH & API ENDPOINTS (NJS) =====
+        # ===== AUTH & API ENDPOINTS (LUA) =====
         
-        # Authentication endpoints (still use NJS for complex logic)
-        location /api/auth/ {
-            client_body_buffer_size 32k;
-            client_max_body_size 32k;
-            js_content auth.handleAuthRequest;
+        # Simple auth endpoints using Lua instead of NJS
+        location = /api/auth/login {
+            content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        location /api/admin/ {
-            client_body_buffer_size 32k;
-            client_max_body_size 32k;
-            js_content admin.handleAdminRequest;
+        location = /api/auth/register {
+            content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        location /api/init {
-            js_content utils.handleInit;
+        location = /api/auth/verify {
+            content_by_lua_file /usr/local/openresty/nginx/lua/auth.lua;
         }
 
-        location /health {
-            js_content utils.healthCheck;
+        location ~ ^/api/admin/ {
+            content_by_lua_file /usr/local/openresty/nginx/lua/admin.lua;
+        }
+
+        location = /api/init {
+            content_by_lua_file /usr/local/openresty/nginx/lua/init.lua;
+        }
+
+        location = /health {
+            content_by_lua_block {
+                ngx.say('{"status": "healthy", "timestamp": "' .. ngx.utctime() .. '"}')
+            }
         }
 
         # Static HTML page pretty routes
