--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,8 +87,6 @@ services:
       timeout: 5s
       retries: 3
       start_period: 30s
-
-  # Nginx with njs and redis2 module - waits for Redis to be healthy
   nginx:
     build: ./nginx
     container_name: devstral-nginx
@@ -100,6 +98,11 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - ADMIN_USER_ID=${ADMIN_USER_ID}
       - MAX_PENDING_USERS=${MAX_PENDING_USERS}
+      # Add other environment variables as needed
+      - MIN_USERNAME_LENGTH=${MIN_USERNAME_LENGTH}
+      - MAX_USERNAME_LENGTH=${MAX_USERNAME_LENGTH}
+      - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
+      - MAX_PASSWORD_LENGTH=${MAX_PASSWORD_LENGTH}
     volumes:
       - ./volumes/nginx_cache:/var/cache/nginx
       - ./volumes/nginx_logs:/var/log/nginx
