--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 ALLOWED_DOMAINS=localhost,127.0.0.1,ai.junder.uk
 
 # Admin User Configuration (REQUIRED TO CHANGE)
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
+ADMIN_USERNAME=admin1
+ADMIN_PASSWORD=admin1
 ADMIN_USER_ID=admin
 
 # Model Configuration
@@ -75,7 +75,7 @@ CHAT_CACHE_TTL_SECONDS=1800               # Cache TTL (30 minutes)
 # 👥 USER VALIDATION SETTINGS
 # =============================================================================
 MIN_USERNAME_LENGTH=3
-MAX_USERNAME_LENGTH=50
+MAX_USERNAME_LENGTH=14
 MIN_PASSWORD_LENGTH=5
 MAX_PASSWORD_LENGTH=128
 MAX_MESSAGE_LENGTH=5000                   # Max message length
