--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ events {
 }
 
 http {
-    include /etc/nginx/mime.types;
+    include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
     # OpenResty has lua built-in, no need for NJS imports
