--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,8 @@
-# nginx/Dockerfile - Using OpenResty with nginx 1.25.3 (compatible with NJS 0.7.0+)
+# nginx/Dockerfile - Simplified without startup script
 
 FROM openresty/openresty:1.25.3.1-0-alpine-fat
 
-# Install additional dependencies (OpenResty has built-in modules)
+# Install additional dependencies
 RUN apk add --no-cache \
     curl \
     wget
@@ -28,17 +28,15 @@ RUN curl -o /usr/local/openresty/nginx/html/js/lib/jquery.min.js https://code.jq
     curl -o /usr/local/openresty/nginx/html/js/lib/bootstrap.min.js https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js && \
     curl -o /usr/local/openresty/nginx/html/css/bootstrap.min.css https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css
 
-# Copy NGINX configuration, Lua files, and startup script
+# Copy NGINX configuration and Lua files (no startup script needed)
 COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
 COPY lua/ /usr/local/openresty/nginx/lua/
 COPY html/ /usr/local/openresty/nginx/html/
 COPY static/ /usr/local/openresty/nginx/html/
-COPY startup.sh /usr/local/bin/startup.sh
 
 # Set proper permissions
 RUN chmod -R 755 /usr/local/openresty/nginx/html/ && \
     chmod -R 755 /usr/local/openresty/nginx/lua/ && \
-    chmod +x /usr/local/bin/startup.sh && \
     chown -R nobody:nobody /usr/local/openresty/nginx/html/ && \
     chown -R nobody:nobody /usr/local/openresty/nginx/lua/ && \
     chown -R nobody:nobody /var/cache/nginx && \
@@ -51,5 +49,5 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
 # Expose port
 EXPOSE 80
 
-# Start with initialization
-CMD ["/usr/local/bin/startup.sh"]
+# Start OpenResty directly - init_worker_by_lua handles admin user creation
+CMD ["/usr/local/openresty/bin/openresty", "-g", "daemon off;"]
