--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# OpenResty compatible nginx.conf
+# OpenResty compatible nginx.conf with init_by_lua for admin user creation
 # OpenResty has redis2 and lua built-in, no external modules needed
 
 user nobody;
@@ -15,8 +15,87 @@ http {
     include /usr/local/openresty/nginx/conf/mime.types;
     default_type application/octet-stream;
 
-    # OpenResty has lua built-in, no need for NJS imports
-    # We'll use lua for server-side logic
+    # Initialize admin user on startup
+    init_by_lua_block {
+        local cjson = require "cjson"
+        
+        -- Get admin credentials from environment variables
+        local admin_username = os.getenv("ADMIN_USERNAME") or "admin1"
+        local admin_password = os.getenv("ADMIN_PASSWORD") or "admin1"
+        local admin_user_id = os.getenv("ADMIN_USER_ID") or "admin"
+        
+        -- Store in global variables for later use
+        ngx.shared.config:set("admin_username", admin_username)
+        ngx.shared.config:set("admin_password", admin_password)
+        ngx.shared.config:set("admin_user_id", admin_user_id)
+        
+        ngx.log(ngx.ERR, "Init: Admin credentials loaded - username: " .. admin_username .. ", user_id: " .. admin_user_id)
+    }
+
+    # Initialize admin user per worker
+    init_worker_by_lua_block {
+        local cjson = require "cjson"
+        local redis = require "resty.redis"
+        
+        -- Only run in first worker to avoid race conditions
+        if ngx.worker.id() ~= 0 then
+            return
+        end
+        
+        -- Get admin credentials from shared memory
+        local admin_username = ngx.shared.config:get("admin_username")
+        local admin_password = ngx.shared.config:get("admin_password")
+        local admin_user_id = ngx.shared.config:get("admin_user_id")
+        
+        ngx.log(ngx.ERR, "Worker Init: Creating admin user if not exists")
+        
+        -- Connect to Redis
+        local red = redis:new()
+        local ok, err = red:connect("redis", 6379)
+        if not ok then
+            ngx.log(ngx.ERR, "Worker Init: Failed to connect to Redis: ", err)
+            return
+        end
+        
+        -- Check if admin user exists
+        local exists, err = red:exists("user:" .. admin_username)
+        if err then
+            ngx.log(ngx.ERR, "Worker Init: Redis error checking user existence: ", err)
+            red:close()
+            return
+        end
+        
+        if exists == 1 then
+            ngx.log(ngx.ERR, "Worker Init: Admin user '" .. admin_username .. "' already exists")
+            red:close()
+            return
+        end
+        
+        ngx.log(ngx.ERR, "Worker Init: Creating admin user '" .. admin_username .. "'")
+        
+        -- Create admin user
+        local timestamp = os.date("!%Y-%m-%dT%H:%M:%SZ")
+        local ok, err = red:hmset("user:" .. admin_username,
+            "id", admin_user_id,
+            "username", admin_username,
+            "password_hash", admin_password,
+            "is_admin", "true",
+            "is_approved", "true",
+            "created_at", timestamp
+        )
+        
+        if ok then
+            ngx.log(ngx.ERR, "Worker Init: Admin user created successfully")
+        else
+            ngx.log(ngx.ERR, "Worker Init: Failed to create admin user: ", err)
+        end
+        
+        red:close()
+    }
+
+    # Shared memory zones
+    lua_shared_dict config 1m;
+    lua_shared_dict users 10m;
 
     # Upstreams
     upstream redis_backend {
@@ -310,9 +389,10 @@ http {
             content_by_lua_file /usr/local/openresty/nginx/lua/admin.lua;
         }
 
-        location = /api/init {
-            content_by_lua_file /usr/local/openresty/nginx/lua/init.lua;
-        }
+        # Remove the /api/init endpoint since we're using init_worker_by_lua
+        # location = /api/init {
+        #     content_by_lua_file /usr/local/openresty/nginx/lua/init.lua;
+        # }
 
         location = /health {
             content_by_lua_block {
